networkpolicy/networkpolicy__basic_kafka_setup__postgresql__all__postgresql__ingress__ports__postgresql__nr46__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql--all--postgresql--ingress--ports--postgresql--nr46
  namespace: postgresql
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: postgresql
